[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/enemies/bigsnake_stone.png" type="Texture" id=1]
[ext_resource path="res://sprites/enemies/bigsnake.png" type="Texture" id=2]
[ext_resource path="res://scripts/snake.gd" type="Script" id=3]
[ext_resource path="res://sprites/effects/enemydead.png" type="Texture" id=4]
[ext_resource path="res://sprites/enemies/snakemask.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 92, 83 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 192 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "attack",
"speed": 6.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "destroy",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "descendo",
"speed": 6.0
} ]

[sub_resource type="ViewportTexture" id=15]
viewport_path = NodePath("MaskViewport")

[node name="Snake" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource( 3 )

[node name="MaskViewport" type="Viewport" parent="."]
size = Vector2( 100, 200 )
transparent_bg = true
render_target_v_flip = true

[node name="Mask" type="Sprite" parent="MaskViewport"]
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 32
position = Vector2( 0, -98 )
shape = SubResource( 2 )

[node name="SnakeCollision" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 180 )
z_index = -1
polygon = PoolVector2Array( -5, 0, 12, 0, 12, -131, 17, -133, 19, -154, 33, -168, 28, -175, 12, -177, 20, -170, 6, -152, -2, -152, -19, -165, -7, -180, -28, -173, -30, -162, -14, -146, -10, -133, -5, -130 )

[node name="SnakeAnimation" type="AnimatedSprite" parent="."]
light_mask = 32
position = Vector2( 0, 180 )
z_index = -1
frames = SubResource( 9 )
animation = "attack"
offset = Vector2( 0, -96.0744 )

[node name="Rocks" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -24.9152 )

[node name="Light2D" type="Light2D" parent="."]
light_mask = 32
position = Vector2( -4, 95 )
texture = SubResource( 15 )
mode = 3
range_item_cull_mask = 32

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
